--- a/index.html
+++ b/index.html
@@ -23,32 +23,35 @@
 	<!-- =========== Header Section Starts =========== -->
 	<header id="header-section">
 		<!-- Navbar Starts -->
-		<nav class="navbar navbar-expand-lg navbar-light bg-transparent">
+		<nav class="navbar navbar-expand-lg navbar-light bg-transparent py-4">
 			<div class="container">
-				<a class="navbar-brand" href="#">
-					<img src="./assets/icons/Logo.png" alt="" class="d-inline-block align-text-top img-fluid w-50">
-						<a href="#" class="link-bold"><span class="text-green-500">Penguin</span> <span
-                            class="text-gray-700">Fashion</span></a>
+				<a class="navbar-brand d-inline-flex align-items-center" href="#">
+					<img class="img-fluid w-25" src="./assets/icons/Logo.png" alt="">
+					<span class="ms-3 fw-bold fs-3">
+						<span class="text-dark">Ibnu </span>
+						<span class="text-danger">Nike</span>
+					</span>
 				</a>
-				<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
-					aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+				<button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+					data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
+					aria-expanded="false" aria-label="Toggle navigation">
 					<span class="navbar-toggler-icon"></span>
 				</button>
-				<div class="collapse navbar-collapse ms-auto" id="navbarNav">
-					<ul class="navbar-nav ms-auto my-2 my-lg-0 navbar-nav-scroll" style="--bs-scroll-height: 100px;">
-						<li class="nav-item">
-						  <a class="nav-link active" aria-current="page" href="#">Home</a>
+				<div class="collapse navbar-collapse" id="navbarSupportedContent">
+					<ul class="navbar-nav ms-auto mb-2 mb-lg-0">
+						<li class="nav-item px-3 fw-bold">
+							<a class="nav-link active" aria-current="page" href="#">Home</a>
 						</li>
-						<li class="nav-item">
-						  <a class="nav-link" href="#">Product</a>
+						<li class="nav-item px-3 fw-bold">
+							<a class="nav-link" href="#">Products</a>
 						</li>
-						<li class="nav-item">
-						  <a class="nav-link" href="#">Link</a>
+						<li class="nav-item px-3 fw-bold">
+							<a class="nav-link" href="#">About Us</a>
 						</li>
-						<li class="nav-item">
-						  <a class="nav-link" href="#">Link</a>
+						<li class="nav-item px-3 fw-bold">
+							<a class="nav-link" href="#">Contact Us</a>
 						</li>
-					  </ul>
+					</ul>
 				</div>
 			</div>
 		</nav>
@@ -56,24 +59,7 @@
 
 		<!-- Main Banner Starts -->
 		<section id="main-banner">
-			<div class="contaienr d-flex justify-content-around align-items-center py-10 px-4">
-				<div id="main-banner-image">
-					<img src="./assets/images/Group 33092.png" alt="">
-				</div>
-				<div id="banner-text" class="space-y-6">
-					<h1 class="display-3 fw-bold text-uppercase lh-lg"><span class="text-warning">Nike React</span> <br>
-						<span class="text-dark">Infinity Run 2</span></h1>
-					<p class="w-2/3">This show help you to run as you have a power to run infinity time! Super Cool Huh!
-					</p>
-					<button href="#" class="py-4 px-7 bg-gradient-primary fw-bold text-white text-uppercase rounded">
-						<svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6 inline" fill="none" viewBox="0 0 24 24"
-							stroke="currentColor">
-							<path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
-								d="M3 3h2l.4 2M7 13h10l4-8H5.4M7 13L5.4 5M7 13l-2.293 2.293c-.63.63-.184 1.707.707 1.707H17m0 0a2 2 0 100 4 2 2 0 000-4zm-8 2a2 2 0 11-4 0 2 2 0 014 0z" />
-						</svg> Buy Now
-					</button>
-				</div>
-			</div>
+
 		</section>
 		<!-- Main Banner Ends -->
 	</header>
@@ -81,18 +67,9 @@
 
 	<!-- =========== Main Section Starts =========== -->
 	<main id="main-section">
-		<!-- Shoe Shop Starts -->
-		<section id="man-jacket" class="py-20 w-11/12 mx-auto">
-			<div class="container w-75 mx-auto">
-				<h2 class="fs-2 text-dark fw-bold text-uppercase">Man Jacket</h2>
-				<div id="jacket-card-holder" class="row mx-auto">
-					<!-- Single Shoe Card Starts-->
+		<div class="container">
 
-					<!-- Single Shoe Card Ends-->
-				</div>
-			</div>
-		</section>
-		<!-- Shoe Shop Ends -->
+		</div>
 	</main>
 	<!-- =========== Main Section Ends =========== -->
 
