--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 			<div class="container">
 				<a class="navbar-brand d-inline-flex align-items-center" href="#">
 					<img class="img-fluid w-25" src="./assets/icons/Logo.png" alt="">
-					<span class="ms-3 fw-bold fs-3">
+					<span class="ms-2 fw-bold fs-3">
 						<span class="text-dark">Ibnu </span>
 						<span class="text-danger">Nike</span>
 					</span>
@@ -59,7 +59,24 @@
 
 		<!-- Main Banner Starts -->
 		<section id="main-banner">
-
+			<div class="container d-lg-flex align-items-center">
+				<div class="banner-image w-75">
+					<img class="img-fluid w-75" src="./assets/images/Group 33092.png" alt="">
+				</div>
+				<div class="banner-text w-50">
+					<h1 class="display-3 fw-bold text-uppercase">
+						<span class="text-danger">Ibnu Nike</span>
+						<span class="text-dark">Infinity Run</span>
+					</h1>
+					<p class="lead lh-base">A shoe to get a super power to Run Infinity Time! <span class="fw-bold">Super Cool Huh!</span></p>
+					<button class="btn btn-danger text-upppercase text-light">
+						<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-cart-fill" viewBox="0 0 16 16">
+							<path d="M0 1.5A.5.5 0 0 1 .5 1H2a.5.5 0 0 1 .485.379L2.89 3H14.5a.5.5 0 0 1 .491.592l-1.5 8A.5.5 0 0 1 13 12H4a.5.5 0 0 1-.491-.408L2.01 3.607 1.61 2H.5a.5.5 0 0 1-.5-.5zM5 12a2 2 0 1 0 0 4 2 2 0 0 0 0-4zm7 0a2 2 0 1 0 0 4 2 2 0 0 0 0-4zm-7 1a1 1 0 1 1 0 2 1 1 0 0 1 0-2zm7 0a1 1 0 1 1 0 2 1 1 0 0 1 0-2z"/>
+						  </svg>
+						  &nbsp; Buy Now!
+					</button>
+				</div>
+			</div>
 		</section>
 		<!-- Main Banner Ends -->
 	</header>
