--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 <body>
 
 	<!-- =========== Header Section Starts =========== -->
-	<header id="header-section">
+	<header id="header-section" class="pb-5 mb-5 bg-warning bg-gradient">
 		<!-- Navbar Starts -->
 		<nav class="navbar navbar-expand-lg navbar-light bg-transparent py-4">
 			<div class="container">
@@ -58,23 +58,26 @@
 		<!-- Navbar Ends -->
 
 		<!-- Main Banner Starts -->
-		<section id="main-banner">
+		<section id="main-banner" class="pb-5">
 			<div class="container d-lg-flex align-items-center">
 				<div class="banner-image w-75">
-					<img class="img-fluid w-75" src="./assets/images/Group 33092.png" alt="">
+					<img class="img-fluid w-75" src="./assets/images/ibnu-nike.png" alt="">
 				</div>
 				<div class="banner-text w-50">
 					<h1 class="display-3 fw-bold text-uppercase">
 						<span class="text-danger">Ibnu Nike</span>
 						<span class="text-dark">Infinity Run</span>
 					</h1>
-					<p class="lead lh-base">A shoe to get a super power to Run Infinity Time! <span class="fw-bold">Super Cool Huh!</span></p>
-					<button class="btn btn-danger text-upppercase text-light">
-						<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-cart-fill" viewBox="0 0 16 16">
-							<path d="M0 1.5A.5.5 0 0 1 .5 1H2a.5.5 0 0 1 .485.379L2.89 3H14.5a.5.5 0 0 1 .491.592l-1.5 8A.5.5 0 0 1 13 12H4a.5.5 0 0 1-.491-.408L2.01 3.607 1.61 2H.5a.5.5 0 0 1-.5-.5zM5 12a2 2 0 1 0 0 4 2 2 0 0 0 0-4zm7 0a2 2 0 1 0 0 4 2 2 0 0 0 0-4zm-7 1a1 1 0 1 1 0 2 1 1 0 0 1 0-2zm7 0a1 1 0 1 1 0 2 1 1 0 0 1 0-2z"/>
-						  </svg>
-						  &nbsp; Buy Now!
-					</button>
+					<p class="lead lh-base">A shoe to get a super power to Run Infinity Time! <span
+							class="fw-bold">Super Cool Huh!</span></p>
+					<a href="#" target="_blank" class="btn btn-danger bg-gradient text-upppercase fw-bold py-3 px-4">
+						<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
+							class="bi bi-cart-fill" viewBox="0 0 16 16">
+							<path
+								d="M0 1.5A.5.5 0 0 1 .5 1H2a.5.5 0 0 1 .485.379L2.89 3H14.5a.5.5 0 0 1 .491.592l-1.5 8A.5.5 0 0 1 13 12H4a.5.5 0 0 1-.491-.408L2.01 3.607 1.61 2H.5a.5.5 0 0 1-.5-.5zM5 12a2 2 0 1 0 0 4 2 2 0 0 0 0-4zm7 0a2 2 0 1 0 0 4 2 2 0 0 0 0-4zm-7 1a1 1 0 1 1 0 2 1 1 0 0 1 0-2zm7 0a1 1 0 1 1 0 2 1 1 0 0 1 0-2z" />
+						</svg>
+						&nbsp; Buy Now!
+					</a>
 				</div>
 			</div>
 		</section>
@@ -85,7 +88,98 @@
 	<!-- =========== Main Section Starts =========== -->
 	<main id="main-section">
 		<div class="container">
-
+			<!-- Casual Shoes Starts -->
+			<section id="casual-shoes">
+				<div class="container">
+					<h2 class="fs-1 fw-bold text-uppercase text-dark py-5">Casual Shoes</h2>
+					<div id="shoe-cards">
+						<div class="row row-cols-1 row-cols-md-3 g-4">
+							<!-- Shoe Cards 1 -->
+							<div class="col ">
+								<div class="card h-100 p-3 rounded-3 shadow">
+									<div class="card-image mx-auto pt-5 pb-2 bg-secondary bg-gradient rounded-3 text-center">
+										<img src="./assets/images/shoe-1.png" class="card-img-top img-fluid w-75" alt="...">
+									</div>
+									<div class="card-body">
+										<h3 class="card-title fw-bold fs-3">Nike Shoe</h3>
+										<p class="card-text">This is a shoe to get speedy super power. But All the shoe have the power of run infinity.</p>
+									</div>
+									<div class="card-footer border-0 d-flex justify-content-between align-items-center py-0">
+										<div class="price">
+											<h4 class="fs-1 fw-bold text-warning">$234</h4>
+										</div>
+										<div class="card-button">
+											<a href="#" target="_blank" class="btn btn-danger bg-gradient text-upppercase p-2">
+												<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
+													class="bi bi-cart-fill" viewBox="0 0 16 16">
+													<path
+														d="M0 1.5A.5.5 0 0 1 .5 1H2a.5.5 0 0 1 .485.379L2.89 3H14.5a.5.5 0 0 1 .491.592l-1.5 8A.5.5 0 0 1 13 12H4a.5.5 0 0 1-.491-.408L2.01 3.607 1.61 2H.5a.5.5 0 0 1-.5-.5zM5 12a2 2 0 1 0 0 4 2 2 0 0 0 0-4zm7 0a2 2 0 1 0 0 4 2 2 0 0 0 0-4zm-7 1a1 1 0 1 1 0 2 1 1 0 0 1 0-2zm7 0a1 1 0 1 1 0 2 1 1 0 0 1 0-2z" />
+												</svg>
+												&nbsp; Buy Now!
+											</a>
+										</div>
+									</div>
+								</div>
+							</div>
+							<!-- Shoe Cards 2 -->
+							<div class="col ">
+								<div class="card h-100 p-3 rounded-3 shadow">
+									<div class="card-image mx-auto pt-5 pb-2 bg-secondary bg-gradient rounded-3 text-center">
+										<img src="./assets/images/shoe-2.png" class="card-img-top img-fluid w-75" alt="...">
+									</div>
+									<div class="card-body">
+										<h3 class="card-title fw-bold fs-3">Nike Shoe</h3>
+										<p class="card-text">This is a shoe to get speedy super power. But All the shoe have the power of run infinity.</p>
+									</div>
+									<div class="card-footer border-0 d-flex justify-content-between align-items-center py-0">
+										<div class="price">
+											<h4 class="fs-1 fw-bold text-warning">$234</h4>
+										</div>
+										<div class="card-button">
+											<a href="#" target="_blank" class="btn btn-danger bg-gradient text-upppercase p-2">
+												<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
+													class="bi bi-cart-fill" viewBox="0 0 16 16">
+													<path
+														d="M0 1.5A.5.5 0 0 1 .5 1H2a.5.5 0 0 1 .485.379L2.89 3H14.5a.5.5 0 0 1 .491.592l-1.5 8A.5.5 0 0 1 13 12H4a.5.5 0 0 1-.491-.408L2.01 3.607 1.61 2H.5a.5.5 0 0 1-.5-.5zM5 12a2 2 0 1 0 0 4 2 2 0 0 0 0-4zm7 0a2 2 0 1 0 0 4 2 2 0 0 0 0-4zm-7 1a1 1 0 1 1 0 2 1 1 0 0 1 0-2zm7 0a1 1 0 1 1 0 2 1 1 0 0 1 0-2z" />
+												</svg>
+												&nbsp; Buy Now!
+											</a>
+										</div>
+									</div>
+								</div>
+							</div>
+							<!-- Shoe Cards 3 -->
+							<div class="col ">
+								<div class="card h-100 p-3 rounded-3 shadow">
+									<div class="card-image mx-auto pt-5 pb-2 bg-secondary bg-gradient rounded-3 text-center">
+										<img src="./assets/images/shoe-3.png" class="card-img-top img-fluid w-75" alt="...">
+									</div>
+									<div class="card-body">
+										<h3 class="card-title fw-bold fs-3">Nike Shoe</h3>
+										<p class="card-text">This is a shoe to get speedy super power. But All the shoe have the power of run infinity.</p>
+									</div>
+									<div class="card-footer border-0 d-flex justify-content-between align-items-center py-0">
+										<div class="price">
+											<h4 class="fs-1 fw-bold text-warning">$234</h4>
+										</div>
+										<div class="card-button">
+											<a href="#" target="_blank" class="btn btn-danger bg-gradient text-upppercase p-2">
+												<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
+													class="bi bi-cart-fill" viewBox="0 0 16 16">
+													<path
+														d="M0 1.5A.5.5 0 0 1 .5 1H2a.5.5 0 0 1 .485.379L2.89 3H14.5a.5.5 0 0 1 .491.592l-1.5 8A.5.5 0 0 1 13 12H4a.5.5 0 0 1-.491-.408L2.01 3.607 1.61 2H.5a.5.5 0 0 1-.5-.5zM5 12a2 2 0 1 0 0 4 2 2 0 0 0 0-4zm7 0a2 2 0 1 0 0 4 2 2 0 0 0 0-4zm-7 1a1 1 0 1 1 0 2 1 1 0 0 1 0-2zm7 0a1 1 0 1 1 0 2 1 1 0 0 1 0-2z" />
+												</svg>
+												&nbsp; Buy Now!
+											</a>
+										</div>
+									</div>
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>
+			</section>
+			<!-- Casual Shoes Ends -->
 		</div>
 	</main>
 	<!-- =========== Main Section Ends =========== -->
