Shopping Section Complete

--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
 	<main id="main-section">
 		<div class="container">
 			<!-- Casual Shoes Starts -->
-			<section id="casual-shoes">
+			<section id="casual-shoes" class="py-4">
 				<div class="container">
 					<h2 class="fs-1 fw-bold text-uppercase text-dark py-5">Casual Shoes</h2>
 					<div id="shoe-cards">
@@ -104,7 +104,7 @@
 										<h3 class="card-title fw-bold fs-3">Nike Shoe</h3>
 										<p class="card-text">This is a shoe to get speedy super power. But All the shoe have the power of run infinity.</p>
 									</div>
-									<div class="card-footer border-0 d-flex justify-content-between align-items-center py-0">
+									<div class="card-footer bg-transparent border-0 d-flex justify-content-between align-items-center py-0">
 										<div class="price">
 											<h4 class="fs-1 fw-bold text-warning">$234</h4>
 										</div>
@@ -128,10 +128,10 @@
 										<img src="./assets/images/shoe-2.png" class="card-img-top img-fluid w-75" alt="...">
 									</div>
 									<div class="card-body">
-										<h3 class="card-title fw-bold fs-3">Nike Shoe</h3>
-										<p class="card-text">This is a shoe to get speedy super power. But All the shoe have the power of run infinity.</p>
+										<h3 class="card-title fw-bold fs-3">Nike Skate Shoe</h3>
+										<p class="card-text">This is a shoe to get skating super power. But All the shoe have the power of run infinity.</p>
 									</div>
-									<div class="card-footer border-0 d-flex justify-content-between align-items-center py-0">
+									<div class="card-footer bg-transparent border-0 d-flex justify-content-between align-items-center py-0">
 										<div class="price">
 											<h4 class="fs-1 fw-bold text-warning">$234</h4>
 										</div>
@@ -155,10 +155,10 @@
 										<img src="./assets/images/shoe-3.png" class="card-img-top img-fluid w-75" alt="...">
 									</div>
 									<div class="card-body">
-										<h3 class="card-title fw-bold fs-3">Nike Shoe</h3>
-										<p class="card-text">This is a shoe to get speedy super power. But All the shoe have the power of run infinity.</p>
+										<h3 class="card-title fw-bold fs-3">Nike Basketball Shoe</h3>
+										<p class="card-text">This is a shoe to get jumping super power. But All the shoe have the power of run infinity.</p>
 									</div>
-									<div class="card-footer border-0 d-flex justify-content-between align-items-center py-0">
+									<div class="card-footer bg-transparent border-0 d-flex justify-content-between align-items-center py-0">
 										<div class="price">
 											<h4 class="fs-1 fw-bold text-warning">$234</h4>
 										</div>
@@ -180,6 +180,99 @@
 				</div>
 			</section>
 			<!-- Casual Shoes Ends -->
+
+			<!-- Formal Shoes Starts -->
+			<section id="formal-shoes" class="py-4">
+				<div class="container">
+					<h2 class="fs-1 fw-bold text-uppercase text-dark py-5">Formal Shoes</h2>
+					<div id="shoe-cards">
+						<div class="row row-cols-1 row-cols-md-3 g-4">
+							<!-- Shoe Cards 4 -->
+							<div class="col ">
+								<div class="card h-100 p-3 rounded-3 shadow">
+									<div class="card-image mx-auto pt-5 pb-2 shadow-sm rounded-3 text-center">
+										<img src="./assets/images/shoe-4.png" class="card-img-top img-fluid w-75" alt="...">
+									</div>
+									<div class="card-body">
+										<h3 class="card-title fw-bold fs-3">Prestige High-Cut Leather</h3>
+										<p class="card-text">This is a shoe to get Prestige super power. But All the shoe have the power of run infinity.</p>
+									</div>
+									<div class="card-footer bg-transparent border-0 d-flex justify-content-between align-items-center py-0">
+										<div class="price">
+											<h4 class="fs-1 fw-bold text-warning">$234</h4>
+										</div>
+										<div class="card-button">
+											<a href="#" target="_blank" class="btn btn-danger bg-gradient text-upppercase p-2">
+												<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
+													class="bi bi-cart-fill" viewBox="0 0 16 16">
+													<path
+														d="M0 1.5A.5.5 0 0 1 .5 1H2a.5.5 0 0 1 .485.379L2.89 3H14.5a.5.5 0 0 1 .491.592l-1.5 8A.5.5 0 0 1 13 12H4a.5.5 0 0 1-.491-.408L2.01 3.607 1.61 2H.5a.5.5 0 0 1-.5-.5zM5 12a2 2 0 1 0 0 4 2 2 0 0 0 0-4zm7 0a2 2 0 1 0 0 4 2 2 0 0 0 0-4zm-7 1a1 1 0 1 1 0 2 1 1 0 0 1 0-2zm7 0a1 1 0 1 1 0 2 1 1 0 0 1 0-2z" />
+												</svg>
+												&nbsp; Buy Now!
+											</a>
+										</div>
+									</div>
+								</div>
+							</div>
+							<!-- Shoe Cards 5 -->
+							<div class="col ">
+								<div class="card h-100 p-3 rounded-3 shadow">
+									<div class="card-image mx-auto pt-5 pb-2 shadow-sm rounded-3 text-center">
+										<img src="./assets/images/shoe-5.png" class="card-img-top img-fluid w-75" alt="...">
+									</div>
+									<div class="card-body">
+										<h3 class="card-title fw-bold fs-3">Slip-On Formal Shoe</h3>
+										<p class="card-text">This is a shoe to get Slip-On super power. But All the shoe have the power of run infinity.</p>
+									</div>
+									<div class="card-footer bg-transparent border-0 d-flex justify-content-between align-items-center py-0">
+										<div class="price">
+											<h4 class="fs-1 fw-bold text-warning">$234</h4>
+										</div>
+										<div class="card-button">
+											<a href="#" target="_blank" class="btn btn-danger bg-gradient text-upppercase p-2">
+												<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
+													class="bi bi-cart-fill" viewBox="0 0 16 16">
+													<path
+														d="M0 1.5A.5.5 0 0 1 .5 1H2a.5.5 0 0 1 .485.379L2.89 3H14.5a.5.5 0 0 1 .491.592l-1.5 8A.5.5 0 0 1 13 12H4a.5.5 0 0 1-.491-.408L2.01 3.607 1.61 2H.5a.5.5 0 0 1-.5-.5zM5 12a2 2 0 1 0 0 4 2 2 0 0 0 0-4zm7 0a2 2 0 1 0 0 4 2 2 0 0 0 0-4zm-7 1a1 1 0 1 1 0 2 1 1 0 0 1 0-2zm7 0a1 1 0 1 1 0 2 1 1 0 0 1 0-2z" />
+												</svg>
+												&nbsp; Buy Now!
+											</a>
+										</div>
+									</div>
+								</div>
+							</div>
+							<!-- Shoe Cards 6 -->
+							<div class="col ">
+								<div class="card h-100 p-3 rounded-3 shadow">
+									<div class="card-image mx-auto pt-5 pb-2 shadow-sm rounded-3 text-center">
+										<img src="./assets/images/shoe-6.png" class="card-img-top img-fluid w-75" alt="...">
+									</div>
+									<div class="card-body">
+										<h3 class="card-title fw-bold fs-3">Flip-On Formal Shoe</h3>
+										<p class="card-text">This is a shoe to get Flip-On super power. But All the shoe have the power of run infinity.</p>
+									</div>
+									<div class="card-footer bg-transparent border-0 d-flex justify-content-between align-items-center py-0">
+										<div class="price">
+											<h4 class="fs-1 fw-bold text-warning">$234</h4>
+										</div>
+										<div class="card-button">
+											<a href="#" target="_blank" class="btn btn-danger bg-gradient text-upppercase p-2">
+												<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
+													class="bi bi-cart-fill" viewBox="0 0 16 16">
+													<path
+														d="M0 1.5A.5.5 0 0 1 .5 1H2a.5.5 0 0 1 .485.379L2.89 3H14.5a.5.5 0 0 1 .491.592l-1.5 8A.5.5 0 0 1 13 12H4a.5.5 0 0 1-.491-.408L2.01 3.607 1.61 2H.5a.5.5 0 0 1-.5-.5zM5 12a2 2 0 1 0 0 4 2 2 0 0 0 0-4zm7 0a2 2 0 1 0 0 4 2 2 0 0 0 0-4zm-7 1a1 1 0 1 1 0 2 1 1 0 0 1 0-2zm7 0a1 1 0 1 1 0 2 1 1 0 0 1 0-2z" />
+												</svg>
+												&nbsp; Buy Now!
+											</a>
+										</div>
+									</div>
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>
+			</section>
+			<!-- Formal Shoes Ends -->
 		</div>
 	</main>
 	<!-- =========== Main Section Ends =========== -->
