Desktop Version Complete

--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
 			<!-- Casual Shoes Ends -->
 
 			<!-- Formal Shoes Starts -->
-			<section id="formal-shoes" class="py-4">
+			<section id="formal-shoes" class="py-4 mb-5">
 				<div class="container">
 					<h2 class="fs-1 fw-bold text-uppercase text-dark py-5">Formal Shoes</h2>
 					<div id="shoe-cards">
@@ -273,6 +273,59 @@
 				</div>
 			</section>
 			<!-- Formal Shoes Ends -->
+
+			<!-- Features Section Starts -->
+			<div id="features-section" class="py-5 mb-5">
+				<div class="container row justify-content-between align-items-center">
+					<div class="col-lg-5">
+						<div class="feature-items">
+							<div class="row shadow rounded-3 my-3">
+								<div class="col d-lg-flex align-items-center p-3 px-5">
+									<div class="feauture-image w-50">
+										<img class="img-fluid w-75" src="./assets/icons/image 12.png" alt="">
+									</div>
+									<div class="feature-text">
+										<h4>Find The Perfect Fit</h4>
+										<p>Everybody is different, which is why we offer styles for every body.</p>
+									</div>
+								</div>
+							</div>
+						</div>
+						<div class="feature-items">
+							<div class="row shadow rounded-3 my-3">
+								<div class="col d-lg-flex align-items-center p-3 px-5">
+									<div class="feauture-image w-50">
+										<img class="img-fluid w-75" src="./assets/icons/image 12.png" alt="">
+									</div>
+									<div class="feature-text">
+										<h4>Find The Perfect Fit</h4>
+										<p>Everybody is different, which is why we offer styles for every body.</p>
+									</div>
+								</div>
+							</div>
+						</div>
+						<div class="feature-items">
+							<div class="row shadow rounded-3 my-3">
+								<div class="col d-lg-flex align-items-center p-3 px-5">
+									<div class="feauture-image w-50">
+										<img class="img-fluid w-75" src="./assets/icons/image 12.png" alt="">
+									</div>
+									<div class="feature-text">
+										<h4>Find The Perfect Fit</h4>
+										<p>Everybody is different, which is why we offer styles for every body.</p>
+									</div>
+								</div>
+							</div>
+						</div>
+					</div>
+					<div class="col-lg-6">
+						<div class="feature-bg">
+							<img class="img-fluid" src="./assets/images/shopping.png" alt="">
+						</div>
+					</div>
+				</div>
+			</div>
+			<!-- Features Section Ends -->
 		</div>
 	</main>
 	<!-- =========== Main Section Ends =========== -->
