--- a/index.html
+++ b/index.html
@@ -14,12 +14,17 @@
 	<link rel="shortcut icon" type="image/x-icon" href="./assets/images/">
 	<!-- Bootstrap CSS CDN -->
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet">
-	<!-- Main Style Sheets -->
-	<link rel="stylesheet" type="text/css" href="./styles/style.css" media="all" />
+
+	<!-- Internal CSS -->
+	<style>
+		::selection {
+			color: var(--bs-light);
+			background-color: var(--bs-danger);
+		}
+	</style>
 </head>
 
 <body>
-
 	<!-- =========== Header Section Starts =========== -->
 	<header id="header-section" class="pb-5 mb-5 bg-warning bg-gradient">
 		<!-- Navbar Starts -->
@@ -93,25 +98,30 @@
 				<div class="container">
 					<h2 class="fs-1 fw-bold text-uppercase text-dark py-5">Casual Shoes</h2>
 					<div id="shoe-cards">
-						<div class="row row-cols-1 row-cols-md-3 g-4">
+						<div class="row row-cols-1 row-cols-md-2 g-4">
 							<!-- Shoe Cards 1 -->
 							<div class="col ">
 								<div class="card h-100 p-3 rounded-3 shadow">
-									<div class="card-image mx-auto pt-5 pb-2 bg-secondary bg-gradient rounded-3 text-center">
-										<img src="./assets/images/shoe-1.png" class="card-img-top img-fluid w-75" alt="...">
+									<div
+										class="card-image mx-auto pt-5 pb-2 bg-secondary bg-gradient rounded-3 text-center">
+										<img src="./assets/images/shoe-1.png" class="card-img-top img-fluid w-75"
+											alt="...">
 									</div>
 									<div class="card-body">
 										<h3 class="card-title fw-bold fs-3">Nike Shoe</h3>
-										<p class="card-text">This is a shoe to get speedy super power. But All the shoe have the power of run infinity.</p>
+										<p class="card-text">This is a shoe to get speedy super power. But All the shoe
+											have the power of run infinity.</p>
 									</div>
-									<div class="card-footer bg-transparent border-0 d-flex justify-content-between align-items-center py-0">
+									<div
+										class="card-footer bg-transparent border-0 d-flex justify-content-between align-items-center py-0">
 										<div class="price">
 											<h4 class="fs-1 fw-bold text-warning">$234</h4>
 										</div>
 										<div class="card-button">
-											<a href="#" target="_blank" class="btn btn-danger bg-gradient text-upppercase p-2">
-												<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
-													class="bi bi-cart-fill" viewBox="0 0 16 16">
+											<a href="#" target="_blank"
+												class="btn btn-danger bg-gradient text-upppercase p-2">
+												<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16"
+													fill="currentColor" class="bi bi-cart-fill" viewBox="0 0 16 16">
 													<path
 														d="M0 1.5A.5.5 0 0 1 .5 1H2a.5.5 0 0 1 .485.379L2.89 3H14.5a.5.5 0 0 1 .491.592l-1.5 8A.5.5 0 0 1 13 12H4a.5.5 0 0 1-.491-.408L2.01 3.607 1.61 2H.5a.5.5 0 0 1-.5-.5zM5 12a2 2 0 1 0 0 4 2 2 0 0 0 0-4zm7 0a2 2 0 1 0 0 4 2 2 0 0 0 0-4zm-7 1a1 1 0 1 1 0 2 1 1 0 0 1 0-2zm7 0a1 1 0 1 1 0 2 1 1 0 0 1 0-2z" />
 												</svg>
@@ -124,21 +134,26 @@
 							<!-- Shoe Cards 2 -->
 							<div class="col ">
 								<div class="card h-100 p-3 rounded-3 shadow">
-									<div class="card-image mx-auto pt-5 pb-2 bg-secondary bg-gradient rounded-3 text-center">
-										<img src="./assets/images/shoe-2.png" class="card-img-top img-fluid w-75" alt="...">
+									<div
+										class="card-image mx-auto pt-5 pb-2 bg-secondary bg-gradient rounded-3 text-center">
+										<img src="./assets/images/shoe-2.png" class="card-img-top img-fluid w-75"
+											alt="...">
 									</div>
 									<div class="card-body">
 										<h3 class="card-title fw-bold fs-3">Nike Skate Shoe</h3>
-										<p class="card-text">This is a shoe to get skating super power. But All the shoe have the power of run infinity.</p>
+										<p class="card-text">This is a shoe to get skating super power. But All the shoe
+											have the power of run infinity.</p>
 									</div>
-									<div class="card-footer bg-transparent border-0 d-flex justify-content-between align-items-center py-0">
+									<div
+										class="card-footer bg-transparent border-0 d-flex justify-content-between align-items-center py-0">
 										<div class="price">
 											<h4 class="fs-1 fw-bold text-warning">$234</h4>
 										</div>
 										<div class="card-button">
-											<a href="#" target="_blank" class="btn btn-danger bg-gradient text-upppercase p-2">
-												<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
-													class="bi bi-cart-fill" viewBox="0 0 16 16">
+											<a href="#" target="_blank"
+												class="btn btn-danger bg-gradient text-upppercase p-2">
+												<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16"
+													fill="currentColor" class="bi bi-cart-fill" viewBox="0 0 16 16">
 													<path
 														d="M0 1.5A.5.5 0 0 1 .5 1H2a.5.5 0 0 1 .485.379L2.89 3H14.5a.5.5 0 0 1 .491.592l-1.5 8A.5.5 0 0 1 13 12H4a.5.5 0 0 1-.491-.408L2.01 3.607 1.61 2H.5a.5.5 0 0 1-.5-.5zM5 12a2 2 0 1 0 0 4 2 2 0 0 0 0-4zm7 0a2 2 0 1 0 0 4 2 2 0 0 0 0-4zm-7 1a1 1 0 1 1 0 2 1 1 0 0 1 0-2zm7 0a1 1 0 1 1 0 2 1 1 0 0 1 0-2z" />
 												</svg>
@@ -151,21 +166,26 @@
 							<!-- Shoe Cards 3 -->
 							<div class="col ">
 								<div class="card h-100 p-3 rounded-3 shadow">
-									<div class="card-image mx-auto pt-5 pb-2 bg-secondary bg-gradient rounded-3 text-center">
-										<img src="./assets/images/shoe-3.png" class="card-img-top img-fluid w-75" alt="...">
+									<div
+										class="card-image mx-auto pt-5 pb-2 bg-secondary bg-gradient rounded-3 text-center">
+										<img src="./assets/images/shoe-3.png" class="card-img-top img-fluid w-75"
+											alt="...">
 									</div>
 									<div class="card-body">
 										<h3 class="card-title fw-bold fs-3">Nike Basketball Shoe</h3>
-										<p class="card-text">This is a shoe to get jumping super power. But All the shoe have the power of run infinity.</p>
+										<p class="card-text">This is a shoe to get jumping super power. But All the shoe
+											have the power of run infinity.</p>
 									</div>
-									<div class="card-footer bg-transparent border-0 d-flex justify-content-between align-items-center py-0">
+									<div
+										class="card-footer bg-transparent border-0 d-flex justify-content-between align-items-center py-0">
 										<div class="price">
 											<h4 class="fs-1 fw-bold text-warning">$234</h4>
 										</div>
 										<div class="card-button">
-											<a href="#" target="_blank" class="btn btn-danger bg-gradient text-upppercase p-2">
-												<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
-													class="bi bi-cart-fill" viewBox="0 0 16 16">
+											<a href="#" target="_blank"
+												class="btn btn-danger bg-gradient text-upppercase p-2">
+												<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16"
+													fill="currentColor" class="bi bi-cart-fill" viewBox="0 0 16 16">
 													<path
 														d="M0 1.5A.5.5 0 0 1 .5 1H2a.5.5 0 0 1 .485.379L2.89 3H14.5a.5.5 0 0 1 .491.592l-1.5 8A.5.5 0 0 1 13 12H4a.5.5 0 0 1-.491-.408L2.01 3.607 1.61 2H.5a.5.5 0 0 1-.5-.5zM5 12a2 2 0 1 0 0 4 2 2 0 0 0 0-4zm7 0a2 2 0 1 0 0 4 2 2 0 0 0 0-4zm-7 1a1 1 0 1 1 0 2 1 1 0 0 1 0-2zm7 0a1 1 0 1 1 0 2 1 1 0 0 1 0-2z" />
 												</svg>
@@ -186,25 +206,29 @@
 				<div class="container">
 					<h2 class="fs-1 fw-bold text-uppercase text-dark py-5">Formal Shoes</h2>
 					<div id="shoe-cards">
-						<div class="row row-cols-1 row-cols-md-3 g-4">
+						<div class="row row-cols-1 row-cols-md-2 g-4">
 							<!-- Shoe Cards 4 -->
 							<div class="col ">
 								<div class="card h-100 p-3 rounded-3 shadow">
 									<div class="card-image mx-auto pt-5 pb-2 shadow-sm rounded-3 text-center">
-										<img src="./assets/images/shoe-4.png" class="card-img-top img-fluid w-75" alt="...">
+										<img src="./assets/images/shoe-4.png" class="card-img-top img-fluid w-75"
+											alt="...">
 									</div>
 									<div class="card-body">
 										<h3 class="card-title fw-bold fs-3">Prestige High-Cut Leather</h3>
-										<p class="card-text">This is a shoe to get Prestige super power. But All the shoe have the power of run infinity.</p>
+										<p class="card-text">This is a shoe to get Prestige super power. But All the
+											shoe have the power of run infinity.</p>
 									</div>
-									<div class="card-footer bg-transparent border-0 d-flex justify-content-between align-items-center py-0">
+									<div
+										class="card-footer bg-transparent border-0 d-flex justify-content-between align-items-center py-0">
 										<div class="price">
 											<h4 class="fs-1 fw-bold text-warning">$234</h4>
 										</div>
 										<div class="card-button">
-											<a href="#" target="_blank" class="btn btn-danger bg-gradient text-upppercase p-2">
-												<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
-													class="bi bi-cart-fill" viewBox="0 0 16 16">
+											<a href="#" target="_blank"
+												class="btn btn-danger bg-gradient text-upppercase p-2">
+												<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16"
+													fill="currentColor" class="bi bi-cart-fill" viewBox="0 0 16 16">
 													<path
 														d="M0 1.5A.5.5 0 0 1 .5 1H2a.5.5 0 0 1 .485.379L2.89 3H14.5a.5.5 0 0 1 .491.592l-1.5 8A.5.5 0 0 1 13 12H4a.5.5 0 0 1-.491-.408L2.01 3.607 1.61 2H.5a.5.5 0 0 1-.5-.5zM5 12a2 2 0 1 0 0 4 2 2 0 0 0 0-4zm7 0a2 2 0 1 0 0 4 2 2 0 0 0 0-4zm-7 1a1 1 0 1 1 0 2 1 1 0 0 1 0-2zm7 0a1 1 0 1 1 0 2 1 1 0 0 1 0-2z" />
 												</svg>
@@ -218,20 +242,24 @@
 							<div class="col ">
 								<div class="card h-100 p-3 rounded-3 shadow">
 									<div class="card-image mx-auto pt-5 pb-2 shadow-sm rounded-3 text-center">
-										<img src="./assets/images/shoe-5.png" class="card-img-top img-fluid w-75" alt="...">
+										<img src="./assets/images/shoe-5.png" class="card-img-top img-fluid w-75"
+											alt="...">
 									</div>
 									<div class="card-body">
 										<h3 class="card-title fw-bold fs-3">Slip-On Formal Shoe</h3>
-										<p class="card-text">This is a shoe to get Slip-On super power. But All the shoe have the power of run infinity.</p>
+										<p class="card-text">This is a shoe to get Slip-On super power. But All the shoe
+											have the power of run infinity.</p>
 									</div>
-									<div class="card-footer bg-transparent border-0 d-flex justify-content-between align-items-center py-0">
+									<div
+										class="card-footer bg-transparent border-0 d-flex justify-content-between align-items-center py-0">
 										<div class="price">
 											<h4 class="fs-1 fw-bold text-warning">$234</h4>
 										</div>
 										<div class="card-button">
-											<a href="#" target="_blank" class="btn btn-danger bg-gradient text-upppercase p-2">
-												<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
-													class="bi bi-cart-fill" viewBox="0 0 16 16">
+											<a href="#" target="_blank"
+												class="btn btn-danger bg-gradient text-upppercase p-2">
+												<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16"
+													fill="currentColor" class="bi bi-cart-fill" viewBox="0 0 16 16">
 													<path
 														d="M0 1.5A.5.5 0 0 1 .5 1H2a.5.5 0 0 1 .485.379L2.89 3H14.5a.5.5 0 0 1 .491.592l-1.5 8A.5.5 0 0 1 13 12H4a.5.5 0 0 1-.491-.408L2.01 3.607 1.61 2H.5a.5.5 0 0 1-.5-.5zM5 12a2 2 0 1 0 0 4 2 2 0 0 0 0-4zm7 0a2 2 0 1 0 0 4 2 2 0 0 0 0-4zm-7 1a1 1 0 1 1 0 2 1 1 0 0 1 0-2zm7 0a1 1 0 1 1 0 2 1 1 0 0 1 0-2z" />
 												</svg>
@@ -245,20 +273,24 @@
 							<div class="col ">
 								<div class="card h-100 p-3 rounded-3 shadow">
 									<div class="card-image mx-auto pt-5 pb-2 shadow-sm rounded-3 text-center">
-										<img src="./assets/images/shoe-6.png" class="card-img-top img-fluid w-75" alt="...">
+										<img src="./assets/images/shoe-6.png" class="card-img-top img-fluid w-75"
+											alt="...">
 									</div>
 									<div class="card-body">
 										<h3 class="card-title fw-bold fs-3">Flip-On Formal Shoe</h3>
-										<p class="card-text">This is a shoe to get Flip-On super power. But All the shoe have the power of run infinity.</p>
+										<p class="card-text">This is a shoe to get Flip-On super power. But All the shoe
+											have the power of run infinity.</p>
 									</div>
-									<div class="card-footer bg-transparent border-0 d-flex justify-content-between align-items-center py-0">
+									<div
+										class="card-footer bg-transparent border-0 d-flex justify-content-between align-items-center py-0">
 										<div class="price">
 											<h4 class="fs-1 fw-bold text-warning">$234</h4>
 										</div>
 										<div class="card-button">
-											<a href="#" target="_blank" class="btn btn-danger bg-gradient text-upppercase p-2">
-												<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
-													class="bi bi-cart-fill" viewBox="0 0 16 16">
+											<a href="#" target="_blank"
+												class="btn btn-danger bg-gradient text-upppercase p-2">
+												<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16"
+													fill="currentColor" class="bi bi-cart-fill" viewBox="0 0 16 16">
 													<path
 														d="M0 1.5A.5.5 0 0 1 .5 1H2a.5.5 0 0 1 .485.379L2.89 3H14.5a.5.5 0 0 1 .491.592l-1.5 8A.5.5 0 0 1 13 12H4a.5.5 0 0 1-.491-.408L2.01 3.607 1.61 2H.5a.5.5 0 0 1-.5-.5zM5 12a2 2 0 1 0 0 4 2 2 0 0 0 0-4zm7 0a2 2 0 1 0 0 4 2 2 0 0 0 0-4zm-7 1a1 1 0 1 1 0 2 1 1 0 0 1 0-2zm7 0a1 1 0 1 1 0 2 1 1 0 0 1 0-2z" />
 												</svg>
@@ -295,7 +327,7 @@
 							<div class="row shadow rounded-3 my-3">
 								<div class="col d-lg-flex align-items-center p-3 px-5">
 									<div class="feauture-image w-50">
-										<img class="img-fluid w-75" src="./assets/icons/image 12.png" alt="">
+										<img class="img-fluid w-75" src="./assets/icons/image 13.png" alt="">
 									</div>
 									<div class="feature-text">
 										<h4>Find The Perfect Fit</h4>
@@ -308,7 +340,7 @@
 							<div class="row shadow rounded-3 my-3">
 								<div class="col d-lg-flex align-items-center p-3 px-5">
 									<div class="feauture-image w-50">
-										<img class="img-fluid w-75" src="./assets/icons/image 12.png" alt="">
+										<img class="img-fluid w-75" src="./assets/icons/image 14.png" alt="">
 									</div>
 									<div class="feature-text">
 										<h4>Find The Perfect Fit</h4>
@@ -331,9 +363,21 @@
 	<!-- =========== Main Section Ends =========== -->
 
 	<!-- =========== Footer Section Starts =========== -->
-	<footer id="footer-section">
-		<div class="container">
-
+	<footer id="footer-section" class="bg-light bg-gradient py-5">
+		<div class="container text-center">
+			<div id="footer-logo" class="mb-2">
+				<a class="navbar-brand d-inline-flex align-items-center" href="#">
+					<img class="img-fluid w-25" src="./assets/icons/Logo.png" alt="">
+					<span class="ms-2 fw-bold fs-3">
+						<span class="text-dark">Ibnu </span>
+						<span class="text-danger">Nike</span>
+					</span>
+				</a>
+			</div>
+			<div class="copyright">
+				<p class="lead">Copyright &copy; 2021 | All Rights Reserved | <a href="#"
+						class="link-danger text-decoration-none text-uppercase">Ibnu Mahtab</a></p>
+			</div>
 		</div>
 	</footer>
 	<!-- =========== Footer Section Ends =========== -->
