--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
 				<div class="container">
 					<h2 class="fs-1 fw-bold text-uppercase text-dark py-5">Casual Shoes</h2>
 					<div id="shoe-cards">
-						<div class="row row-cols-1 row-cols-md-2 g-4">
+						<div class="row row-cols-1 row-cols-md-2 row-cols-lg-3 g-4">
 							<!-- Shoe Cards 1 -->
 							<div class="col ">
 								<div class="card h-100 p-3 rounded-3 shadow">
@@ -206,7 +206,7 @@
 				<div class="container">
 					<h2 class="fs-1 fw-bold text-uppercase text-dark py-5">Formal Shoes</h2>
 					<div id="shoe-cards">
-						<div class="row row-cols-1 row-cols-md-2 g-4">
+						<div class="row row-cols-1 row-cols-md-2 row-cols-lg-3 g-4">
 							<!-- Shoe Cards 4 -->
 							<div class="col ">
 								<div class="card h-100 p-3 rounded-3 shadow">
