--- a/index.html
+++ b/index.html
@@ -64,25 +64,30 @@
 
 		<!-- Main Banner Starts -->
 		<section id="main-banner" class="pb-5">
-			<div class="container d-lg-flex align-items-center">
-				<div class="banner-image w-75">
-					<img class="img-fluid w-75" src="./assets/images/ibnu-nike.png" alt="">
-				</div>
-				<div class="banner-text w-50">
-					<h1 class="display-3 fw-bold text-uppercase">
-						<span class="text-danger">Ibnu Nike</span>
-						<span class="text-dark">Infinity Run</span>
-					</h1>
-					<p class="lead lh-base">A shoe to get a super power to Run Infinity Time! <span
-							class="fw-bold">Super Cool Huh!</span></p>
-					<a href="#" target="_blank" class="btn btn-danger bg-gradient text-upppercase fw-bold py-3 px-4">
-						<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
-							class="bi bi-cart-fill" viewBox="0 0 16 16">
-							<path
-								d="M0 1.5A.5.5 0 0 1 .5 1H2a.5.5 0 0 1 .485.379L2.89 3H14.5a.5.5 0 0 1 .491.592l-1.5 8A.5.5 0 0 1 13 12H4a.5.5 0 0 1-.491-.408L2.01 3.607 1.61 2H.5a.5.5 0 0 1-.5-.5zM5 12a2 2 0 1 0 0 4 2 2 0 0 0 0-4zm7 0a2 2 0 1 0 0 4 2 2 0 0 0 0-4zm-7 1a1 1 0 1 1 0 2 1 1 0 0 1 0-2zm7 0a1 1 0 1 1 0 2 1 1 0 0 1 0-2z" />
-						</svg>
-						&nbsp; Buy Now!
-					</a>
+			<div class="container">
+				<div class="row align-items-center">
+					<div class="banner-image col-12 col-lg-6">
+						<img class="img-fluid" src="./assets/images/ibnu-nike.png" alt="">
+					</div>
+					<div class="banner-text col-12 col-lg-6 ps-3 ps-lg-5 mt-5 mt-lg-0">
+						<h1 class="display-3 fw-bold text-uppercase  ps-0 ps-lg-5">
+							<span class="text-danger">Ibnu Nike</span>
+							<span class="text-dark">Infinity Run</span>
+						</h1>
+						<p class="lead lh-base ps-0 ps-lg-5">A shoe to get a super power to Run Infinity Time! 
+							<br> 
+							<span
+								class="fw-bold">Super Cool Huh!</span>
+						</p>
+						<a href="#" target="_blank" class="btn btn-danger bg-gradient text-upppercase fw-bold py-3 px-4 ms-lg-5">
+							<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
+								class="bi bi-cart-fill" viewBox="0 0 16 16">
+								<path
+									d="M0 1.5A.5.5 0 0 1 .5 1H2a.5.5 0 0 1 .485.379L2.89 3H14.5a.5.5 0 0 1 .491.592l-1.5 8A.5.5 0 0 1 13 12H4a.5.5 0 0 1-.491-.408L2.01 3.607 1.61 2H.5a.5.5 0 0 1-.5-.5zM5 12a2 2 0 1 0 0 4 2 2 0 0 0 0-4zm7 0a2 2 0 1 0 0 4 2 2 0 0 0 0-4zm-7 1a1 1 0 1 1 0 2 1 1 0 0 1 0-2zm7 0a1 1 0 1 1 0 2 1 1 0 0 1 0-2z" />
+							</svg>
+							&nbsp; Buy Now!
+						</a>
+					</div>
 				</div>
 			</div>
 		</section>
@@ -307,44 +312,50 @@
 			<!-- Formal Shoes Ends -->
 
 			<!-- Features Section Starts -->
-			<div id="features-section" class="py-5 mb-5">
-				<div class="container row justify-content-between align-items-center">
+			<div id="features-section" class="py-5 mb-5 text-center text-lg-start">
+				<div class="container row justify-content-between align-items-center mx-0">
 					<div class="col-lg-5">
 						<div class="feature-items">
 							<div class="row shadow rounded-3 my-3">
-								<div class="col d-lg-flex align-items-center p-3 px-5">
-									<div class="feauture-image w-50">
-										<img class="img-fluid w-75" src="./assets/icons/image 12.png" alt="">
-									</div>
-									<div class="feature-text">
-										<h4>Find The Perfect Fit</h4>
-										<p>Everybody is different, which is why we offer styles for every body.</p>
-									</div>
-								</div>
-							</div>
-						</div>
-						<div class="feature-items">
-							<div class="row shadow rounded-3 my-3">
-								<div class="col d-lg-flex align-items-center p-3 px-5">
-									<div class="feauture-image w-50">
-										<img class="img-fluid w-75" src="./assets/icons/image 13.png" alt="">
-									</div>
-									<div class="feature-text">
-										<h4>Find The Perfect Fit</h4>
-										<p>Everybody is different, which is why we offer styles for every body.</p>
+								<div class="col p-3 px-4">
+									<div class="row align-items-center">
+										<div class="feauture-image col-12 col-lg-3">
+											<img class="img-fluid px-5 py-3 p-md-0" src="./assets/icons/image 12.png" alt="">
+										</div>
+										<div class="feature-text col-12 col-lg-9">
+											<h4>Find The Perfect Fit</h4>
+											<p>Everybody is different, which is why we offer styles for every body.</p>
+										</div>
 									</div>
 								</div>
 							</div>
 						</div>
 						<div class="feature-items">
 							<div class="row shadow rounded-3 my-3">
-								<div class="col d-lg-flex align-items-center p-3 px-5">
-									<div class="feauture-image w-50">
-										<img class="img-fluid w-75" src="./assets/icons/image 14.png" alt="">
+								<div class="col p-3 px-4">
+									<div class="row align-items-center">
+										<div class="feauture-image col-12 col-lg-3">
+											<img class="img-fluid px-5 py-3 p-md-0" src="./assets/icons/image 12.png" alt="">
+										</div>
+										<div class="feature-text col-12 col-lg-9">
+											<h4>Find The Perfect Fit</h4>
+											<p>Everybody is different, which is why we offer styles for every body.</p>
+										</div>
 									</div>
-									<div class="feature-text">
-										<h4>Find The Perfect Fit</h4>
-										<p>Everybody is different, which is why we offer styles for every body.</p>
+								</div>
+							</div>
+						</div>
+						<div class="feature-items">
+							<div class="row shadow rounded-3 my-3">
+								<div class="col p-3 px-4">
+									<div class="row align-items-center">
+										<div class="feauture-image col-12 col-lg-3">
+											<img class="img-fluid px-5 py-3 p-md-0" src="./assets/icons/image 12.png" alt="">
+										</div>
+										<div class="feature-text col-12 col-lg-9">
+											<h4>Find The Perfect Fit</h4>
+											<p>Everybody is different, which is why we offer styles for every body.</p>
+										</div>
 									</div>
 								</div>
 							</div>
